[tool.poetry]
name = "starter-python"
version = "0.1.0"
description = "A starter project for python"
authors = ["Andrei Lavrenov <andrei@lavrenov.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
